Fixed an issue with the z-index of the language selector
It would be hidden behind the standalone map's controls. The issue is that the header had a z-index inferior than the one of the map's controls. It could be increased until the selector's value though because it would interfere with the z-index of the notifications.

--- a/app/assets/stylesheets/components/front/c-header.scss
+++ b/app/assets/stylesheets/components/front/c-header.scss
@@ -1,7 +1,7 @@
 .c-header {
   position: relative;
   font-family: $font-family-1; // Needed as the map CSS overrides it
-  z-index: 5;
+  z-index: 8;
 
   @if $theme == 2 {
     color: $color-3;
